De-flake HostResolverImplTest.IsIPv6Reachable.

Previously the test would fail if IsGloballyReachable() took longer
than 1 second.

(The test still has a dependency on some actions executing within a 1
second window, but unlikely to hit it).

BUG=673059

Review-Url: https://codereview.chromium.org/2562073003
Cr-Commit-Position: refs/heads/master@{#438373}

Former-commit-id: 1a17ef38f0fd22d8c297524072b4530cb1a2664a